SERVER-80699: Fix Chunk Migrations Optimization for bulkWrite (#16134)

GitOrigin-RevId: 0dea85bbb35079a795b4e1d4845e9527849a4b87